# video-automation

./: .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt
.sisyphus/plans/: video-automation-implementation.md
src/: __init__.py  audio_utils.py  cli.py  ken_burns.py  pipeline.py  transitions.py  utils.py  video_concat.py
tests/: __init__.py  test_audio_utils.py  test_ken_burns.py  test_pipeline_integration.py  test_utils.py  test_video_concat.py
