[project]
name = "video-automation"
version = "0.1.0"
description = "CLI tool for creating Ken Burns effect slideshows from image/audio pairs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Video Automation"}
]

[project.scripts]
video-automation = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
